// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 block noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
>
  Link
</a>
`;

exports[`external link with nofollow 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 block noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel="nofollow"
>
  Link
  <div
    className="box marginStart1 xsDisplayInlineBlock"
  >
    <svg
      className="rtlSupport default icon"
      height={16}
      role="img"
      viewBox="0 0 24 24"
      width={16}
    >
      <title>
        , 
        Opens a new tab
      </title>
      <path
        d="test-file-stub"
      />
    </svg>
  </div>
</a>
`;

exports[`inline and auto underline 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 inlineBlock underline hoverNoUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
>
  Link
</a>
`;

exports[`inline and overriden underline="hover" 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 inlineBlock noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
>
  Link
</a>
`;

exports[`inline and overriden underline="none" 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 inlineBlock noUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
>
  Link
</a>
`;

exports[`regular 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 block noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
>
  Link
</a>
`;

exports[`target blank 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 block noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  Link
</a>
`;

exports[`target null 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 block noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
>
  Link
</a>
`;

exports[`target self 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 block noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  target="_self"
>
  Link
</a>
`;

exports[`with custom rounding, and tapStyle 1`] = `
<a
  className="link inheritTextColor tapTransition pill block noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
>
  Link
</a>
`;

exports[`with onClick 1`] = `
<a
  className="link inheritTextColor tapTransition rounding0 block noUnderline hoverUnderline outlineFocus"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
>
  Link
</a>
`;
